added low hardware mode in main game files

--- a/game.html
+++ b/game.html
@@ -38,7 +38,7 @@
      			</button>
 					<a href="index.html" class="navbar-brand"><i class="glyphicon glyphicon-globe"></i> APE Mining Corporation</a>
 					<div class="btnContainer navbar-brand">
-						<a href="game.html?skipintro=true" class="btn btn-warning" id="restartGameBtn" value="Restart Game" ><i class="glyphicon glyphicon-refresh"></i> Retry</a>
+						<a href="game.html?skipintro=true" class="btn btn-warning gamelink" id="restartGameBtn" value="Restart Game" ><i class="glyphicon glyphicon-refresh"></i> Retry</a>
 						<button class="btn btn-info btn-sm" id="pause" value="Pause Game" ><i class="glyphicon glyphicon-pause"></i> Pause</button>
 						&nbsp;
 					</div>
@@ -46,7 +46,7 @@
 
 				<div class="navbar-collapse collapse"   id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="game.html"><i class="glyphicon glyphicon-play"></i> Game</a></li>
+						<li class="active"><a href="game.html?" id="gamelink" class="gamelink"><i class="glyphicon glyphicon-play"></i> Game</a></li>
 						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#handbook"><i class="glyphicon glyphicon-list-alt"></i> Employee Handbook
 							<b class="caret"></b>
 							</a>
@@ -159,7 +159,7 @@
 					<p>You still have quotas to meet - get back out there as soon as possible! </p>
 		      </div>
 		      <div class="modal-footer">
-		      	<a class="btn btn-success" href="game.html?skipintro=true"><i class="glyphicon glyphicon-refresh"></i> Retry</a>
+		      	<a class="btn btn-success gamelink" href="game.html?skipintro=true"><i class="glyphicon glyphicon-refresh"></i> Retry</a>
 		        <button type="button" class="btn" data-dismiss="modal">Close</button>
 		      </div>
 		    </div>
@@ -262,6 +262,9 @@
 		var gamestate = new GameState();
 		gamestate.init();
 
+		var lowHW = false;
+
+
 		(function($) {
 		    $.QueryString = (function(a) {
 		        if (a == "") return {};
@@ -274,7 +277,7 @@
 		        }
 		        return b;
 		    })(window.location.search.substr(1).split('&'))
-		})(jQuery)
+		})(jQuery);
 
 			$(function() {
 
@@ -325,7 +328,6 @@
 		if ($.QueryString["skipintro"]!=undefined) {
 
 			$(window).load(function(){
-				  //your code here
 				gamestate.startGame();
 			});
 
@@ -344,6 +346,19 @@
 
 
 		}
+
+		if ($.QueryString["low"] != undefined && $.QueryString["low"] == 1 ) {
+			setLowHwMode();
+		}
+
+		function setLowHwMode() {
+			lowHW=true;
+
+			$('.gamelink').each(function() {
+				$(this).attr('href',$(this).attr('href')+'&low=1');
+			});
+		}
+
 
 		</script>
 	</body>
