--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <a href="game.html" role="button" class="btn btn-success btn-lg">Play Now!</a>
         </p>
         <p class="submission">
-        	<a href="game-low.html">Play Lite Version</a>
+        	<a href="game.html?low=1">Play Lite Version</a>
         </p>
         <p class="submission">
           <a href="https://2014.spaceappschallenge.org/challenge/asteroid-prospector">The Challenge</a>
