--- a/original/credits.html
+++ b/original/credits.html
@@ -115,6 +115,7 @@
 					<h5>Other</h5>
 						<ul>
 							<li>Flag Images by <a href="http://www.icondrawer.com">IconDrawer</a></li>
+							<li>Audio files by <a href="http://www.noiseforfun.com">NoiseForFun</a></li>
 						</ul>
 			</div>
 	</div>
