Added shield, also fixed stace station bouncing which fixes #91, plus spelling correction

--- a/game.html
+++ b/game.html
@@ -125,7 +125,7 @@
 					<iframe width="560" height="315" src="//www.youtube.com/embed/s3N34TODZBk" frameborder="0" style="display:block;" allowfullscreen></iframe>
 		      </div>
 		      <div class="modal-footer">
-		        <button type="button" class="btn btn-primary" id="gameStartBtn">Lets Start Mining!</button>
+		        <button type="button" class="btn btn-primary" id="gameStartBtn">Let's Start Mining!</button>
 		      </div>
 		    </div>
 		  </div>
