--- a/credits.html
+++ b/credits.html
@@ -221,7 +221,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-49829161-1', 'ape-mingin.com');
+      ga('create', 'UA-49829161-1', 'ape-mining.com');
       ga('send', 'pageview');
 
     </script>
