--- a/game.html
+++ b/game.html
@@ -377,7 +377,7 @@
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		ga('create', 'UA-49829161-1', 'killfall.github.io');
+		ga('create', 'UA-49829161-1', 'ape-mining.com');
 		ga('send', 'pageview');
 
 	</script>
